# AuTomatoPi

./: .dict  .gitignore  CMakeLists.txt  README.md  _config.yml  build-cmds.txt  index.html  index.md  params.json
AuTomatoes/: .cproject  .gitignore  .project  CMakeLists.txt
AuTomatoes/src/: Appl.cpp  Appl.h  AuTomatoesMain.cpp
AutomatoesClient/: .cproject  .gitignore  .project
AutomatoesClient/src/: Appl.cpp  Appl.h  AuTomatoesClientMain.cpp
BaseApi/: (pivo87@hotmail.com 2015-11-28-17-53-54).cproject  .cproject  .gitignore  .project  CMakeLists.txt  CreateDoxy.cmd  CreateDoxyHyb.cmd  Doxy.cfg  DoxyIndex.lnk  DoxyfileGeneral.cfg  ExportBaseApi.rexpfd  index.html - Shortcut.lnk  rpi.cmake
BaseApi/ArmDebugDynamic/: makefile  sources.mk
BaseApi/ArmDebugDynamic/src/: subdir.mk
BaseApi/ArmDebugDynamic/src/impl/: subdir.mk
BaseApi/LinDebugStatic/: makefile
BaseApi/LinDebugStatic/src/: BaCom.d  BaCore.d  BaLog.d  CBaLog.d  iniparser.d  subdir.mk
BaseApi/TestApp/: CMakeLists.txt  main.cpp
BaseApi/WinDebugStatic/: makefile  sources.mk
BaseApi/WinDebugStatic/src/: BaCom.d  BaGpio.d  BaIniParse.d  BaLog.d  CBaGpio.d  dictionary.d  subdir.mk
BaseApi/src/: BaBool.h  BaCom.cpp  BaCom.h  BaComWin32.cpp  BaCore.cpp  BaCore.h  BaGenMacros.h  BaGpio.cpp  BaGpio.h  BaIniParse.cpp  BaIniParse.h  BaIpc.cpp  BaIpc.h  BaIpcDef.h  BaIpcRegistry.cpp  BaIpcRegistry.h  BaIpcSvr.cpp  BaIpcSvr.h  BaLog.cpp  BaLog.h  BaLogMacros.h  BaMsg.cpp  BaMsg.h  BaPi.cpp  BaPi.h  BaProc.cpp  BaProc.h  BaRPi.cpp  BaRPi.h  BaSwOsci.cpp  BaSwOsci.h  BaUtils.hpp  BaseApi.cpp  BaseApi.h  CBaGpio.cpp  CBaGpio.h  CBaLog.cpp  CBaLog.h  CMakeLists.txt  CtrlPT1.cpp  (+21 more)
BaseApi/src/dbg/: BaDbgMacros.h
BaseApi/src/impl/: BaGpioPinout.h  BaLogMacros.h  BaTmpTime.hpp  CBaIpcRegistry.cpp  CBaIpcRegistry.h  CBaIpcSvr.cpp  CBaIpcSvr.h  CBaLog.cpp  CBaLog.h  CBaMsg.cpp  CBaMsg.h  CBaSwOsci.cpp  CBaSwOsci.h  CCtrlPT1.cpp  CCtrlPT1.h  COsIpcRegistry.cpp  COsIpcRegistry.h  COsIpcSvr.cpp  COsIpcSvr.h  HwGpioPinout.h
BaseApiTest/: .cproject  .gdbinit  .gitignore  .project
BaseApiTest/LinDebug/: makefile  objects.mk
BaseApiTest/LinRelease/: makefile  sources.mk
BaseApiTest/WinDebug/: makefile  objects.mk
BaseApiTest/res/: .gitignore  example.ini
BaseApiTest/src/: BaComTest.cpp  BaComTest.h  BaCoreTest.cpp  BaCoreTest.h  BaGpioTest.cpp  BaGpioTest.h  BaIniParseTest.cpp  BaIniParseTest.h  BaIpcRegistryTest.cpp  BaIpcRegistryTest.h  BaIpcTest.cpp  BaIpcTest.h  BaLogTest.cpp  BaLogTest.h  BaMsgTest.cpp  BaMsgTest.h  BaProcTest.cpp  BaProcTest.h  BaRPiTest.cpp  BaRPiTest.h  BaSwOsciTest.cpp  BaSwOsciTest.h  BaTestTest.cpp  BaTestTest.h  BaUtilsTest.cpp  BaUtilsTest.h  BaseApiTest.cpp  BaseApiTest.h  BaseApiTestMain.cpp  CppU.h  CtrlPT1Test.cpp  CtrlPT1Test.h  HwComTest.cpp  HwComTest.h  HwGpioTest.h  HwPiTest.cpp  HwPiTest.h  OsIpcRegistryTest.cpp  OsIpcRegistryTest.h  OsIpcTest.cpp  (+8 more)
Doc/html/: BaBool_8h.html  BaBool_8h__dep__incl.map  BaBool_8h__dep__incl.md5  BaBool_8h__incl.map  BaBool_8h__incl.md5  BaBool_8h_source.html  BaCom_8h.html  BaCom_8h__incl.map  BaCom_8h__incl.md5  BaCom_8h_source.html  BaCore_8h.html  BaCore_8h__dep__incl.map  BaCore_8h__dep__incl.md5  BaCore_8h__incl.map  BaCore_8h__incl.md5  BaCore_8h_source.html  BaGenMacros_8h.html  BaGenMacros_8h_source.html  (+212 more)
cmake-toolchains/: raspi-win.cmake  raspi.cmake
cppunit-1.12.1/: .cproject  .gitignore  .project  CMakeLists.txt
cppunit-1.12.1/LinDebugStatic/: makefile
cppunit-1.12.1/LinDebugStatic/src/: Asserter.d  BeOsDynamicLibraryManager.d  DllMain.d  DynamicLibraryManager.d  DynamicLibraryManagerException.d  PlugInManager.d  PlugInParameters.d  ProtectorChain.d  RepeatedTest.d  ShlDynamicLibraryManager.d  StringTools.d  SynchronizedObject.d  TestCase.d  TestComposite.d  TestLeaf.d  TestNamer.d  TestPlugInDefaultImpl.d  TestSuccessListener.d  TextTestProgressListener.d  TextTestResult.d  TextTestRunner.d  UnixDynamicLibraryManager.d  Win32DynamicLibraryManager.d  XmlOutputterHook.d  subdir.mk
cppunit-1.12.1/WinDebugStatic/: makefile
cppunit-1.12.1/WinDebugStatic/src/: AdditionalMessage.d  BriefTestProgressListener.d  CompilerOutputter.d  DefaultProtector.d  DynamicLibraryManager.d  Exception.d  Message.d  PlugInManager.d  PlugInParameters.d  Protector.d  SourceLine.d  Test.d  TestAssert.d  TestCaseDecorator.d  TestDecorator.d  TestFactoryRegistry.d  TestFailure.d  TestPath.d  TestPlugInDefaultImpl.d  TestResult.d  TestResultCollector.d  TestRunner.d  TestSetUp.d  TestSuite.d  TestSuiteBuilderContext.d  TextOutputter.d  TypeInfoHelper.d  Win32DynamicLibraryManager.d  XmlDocument.d  XmlElement.d  XmlOutputter.d  subdir.mk
cppunit-1.12.1/include/cppunit/: Portability.h  TestAssert.h
cppunit-1.12.1/include/cppunit/config/: config-gcc.h
cppunit-1.12.1/src/: DllMain.cpp
(+105 files in other folders)
